terraform/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dify-ingress
  namespace: dify
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "dify-static-ip"
    networking.gke.io/managed-certificates: "dify-certificate"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - host: your-domain.com  # Change to your domain
    http:
      paths:
      - path: /console/api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: api
            port:
              number: 5001
      - path: /api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: api
            port:
              number: 5001
      - path: /v1/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: api
            port:
              number: 5001
      - path: /files/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: api
            port:
              number: 5001
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: web
            port:
              number: 3000
